--- a/Quick AI 01/Quick AI 01.csproj
+++ b/Quick AI 01/Quick AI 01.csproj
@@ -68,7 +68,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="boostrap\css\all.min.css" />
     <Content Include="boostrap\css\bootstrap.min.css" />
+    <Content Include="boostrap\css\chart.js" />
     <Content Include="boostrap\css\color.css" />
     <Content Include="boostrap\css\flags.min.css" />
     <Content Include="boostrap\css\jquery.min.js" />
@@ -76,6 +78,7 @@
     <Content Include="boostrap\icon\icons.css" />
     <Content Include="boostrap\js\bootstrap.bundle.min.js" />
     <Content Include="boostrap\js\home-hero-icon.png" />
+    <Content Include="boostrap\js\jquery.min.js" />
     <Content Include="boostrap\js\jquery.slim.min.js" />
     <Content Include="boostrap\js\popper.min.js" />
     <Content Include="DashBoard.aspx" />
@@ -2152,6 +2155,8 @@
     <Content Include="WebForm1.aspx" />
     <Content Include="Home.aspx" />
     <Content Include="WebForm3.aspx" />
+    <Content Include="WebForm4.aspx" />
+    <Content Include="WebForm5.aspx" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AI.Master.cs">
@@ -2167,6 +2172,13 @@
     </Compile>
     <Compile Include="DashBoard.aspx.designer.cs">
       <DependentUpon>DashBoard.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Dashboard.Master.cs">
+      <DependentUpon>Dashboard.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Dashboard.Master.designer.cs">
+      <DependentUpon>Dashboard.Master</DependentUpon>
     </Compile>
     <Compile Include="Forgot Passward.aspx.cs">
       <DependentUpon>Forgot Passward.aspx</DependentUpon>
@@ -2217,6 +2229,20 @@
     </Compile>
     <Compile Include="WebForm3.aspx.designer.cs">
       <DependentUpon>WebForm3.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="WebForm4.aspx.cs">
+      <DependentUpon>WebForm4.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WebForm4.aspx.designer.cs">
+      <DependentUpon>WebForm4.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="WebForm5.aspx.cs">
+      <DependentUpon>WebForm5.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WebForm5.aspx.designer.cs">
+      <DependentUpon>WebForm5.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -2274,6 +2300,7 @@
     <Content Include="font\webfonts\fa-v4compatibility.ttf" />
     <Content Include="font\webfonts\fa-v4compatibility.woff2" />
     <Content Include="AI.Master" />
+    <Content Include="Dashboard.Master" />
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
